<resources>
    <string name="app_name">ONGInfo</string>
    <!--string name="title_activity_start_perfil">Selecione o perfil</string-->
    <string name="title_activity_start_perfil">ONGInfo</string>
    <string name="listar_ongs">Listar ONG\'s</string>
    <string name="ong">ONG</string>
    <string name="pessoa">Pessoa</string>
    <string name="entrar">Entrar</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="esqueceu_senha">Esqueceu a senha?</string>
    <string name="primeiro_acesso">Primeiro acesso</string>
    <string name="nome_ong">Nome da ONG</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="logo">Logo</string>
    <string name="title_activity_perfil_ongs">PerfilOngsActivity</string>
    <string name="voltar">Voltar</string>
    <string name="descricao">Descrição</string>
    <string name="data">Data</string>
    <string name="endereco">Endereço</string>
    <string name="sobre">Sobre</string>
    <string name="telefone">Telefone</string>
    <string name="sede">Sede</string>
    <string name="localizacao">Localização</string>
    <string name="salvar">Salvar</string>
    <string name="editar">Editar</string>
    <string name="perfil">Perfil</string>
    <string name="add_evento">Adicionar evento</string>
    <string name="titulo">Título</string>
    <string name="eventos">Eventos</string>
    <string name="remover">Remover</string>
    <string name="todas_ongs">Todas as Ongs</string>
    <string name="evento">Evento</string>
    <string name="sair">Sair</string>
</resources>
