<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CadastroPessoaActivity">

    <Button
        android:id="@+id/btncadcancelarpessoa"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtcadconfirmarsenhapessoa"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/btncadconfirmarpessoa"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/confirmar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toEndOf="@+id/btncadcancelarpessoa"
        app:layout_constraintTop_toBottomOf="@+id/etxtcadconfirmarsenhapessoa"
        app:layout_constraintVertical_bias="0.125" />

    <EditText
        android:id="@+id/etxteditsobreong"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginBottom="336dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etxtloginsenhapessoa"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginBottom="172dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxteditsobreong"
        app:layout_constraintVertical_bias="0.027" />

    <EditText
        android:id="@+id/etxtcadconfirmarsenhapessoa"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginBottom="140dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/confirmar_senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtloginsenhapessoa"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="104dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/divider"
        android:layout_width="350dp"
        android:layout_height="20dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="394dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="Facebook"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="429dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OU"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="394dp" />

</android.support.constraint.ConstraintLayout>